# FrontDeskAgent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AI_ROUTING.md  API.md  CALLCHAT_INTEGRATION.md  CPU_MODELS.md  DEPLOYMENT.md  DOWNLOADS_AND_RELEASES.md  INDUSTRY_PLAYBOOKS.md  INTEGRATIONS.md  OPENZERO_INTEGRATION.md  ROADMAP.md  SECURITY.md  SELF_HOSTED_BUSINESS_GUIDE.md
examples/: call-webhook.json
frontdeskagent/: app.py  config.py  db.py  intake.py  integrations.py  llm.py  mail.py  openzero.py  prompts.py  setup_wizard.py  web_ingest.py
frontdeskagent/static/: app.css  app.js
frontdeskagent/templates/: appointments.html  base.html  dashboard.html  integrations.html  knowledge.html  leads.html  playground.html  settings.html
systemd/: frontdeskagent.service
tests/: test_app.py
